    ADDED: New Gorilla-style icon by www.OnExige.com
    FIXED: can't sort by extension when "Case Sensitive sort" is on
    FIXED: move to trash didn't work on kde 3.4.0
    FIXED: [ 1123995 ] custom selection mode misfunction

  UPDATED: Bulgarian translation (thanks Milen Ivanov)


1.60.0-beta2
======================
    FIXED: devices:/ is changed to media:/ in 3.4
    FIXED: konfigurator crash on KDE 3.4 at checking 'save settings'
    FIXED: no refresh after splitting files
    FIXED: splitter doesn't handle sizes bigger than 2 GB properly
    FIXED: problem at restart if virtual folders were saved at last exit
    FIXED: locate / search feed to listbox number generation


1.60.0-beta1
======================    
    ADDED: useraction: new placeholder: %_ListFile()%
    ADDED: total commander color scheme
    ADDED: Custom Selection Mode. dirk: a dream comming true? ;-)
    ADDED: synchronizer, exclude directories from the comparation
    ADDED: some nice sample useractions
    ADDED: PopularUrls was rewritten for a nice-like algorithm
    ADDED: Useractions in the menubar (need an update of krusaderui.rc)
    --architecture-- KChooseDir was rewritten. plz have a look at the code/email 
    --architecture-- move listpanel from qstring to kurl. plz read email before
                     continuing! --
    ADDED: searcher: ask for a collection-name on feed to listbox
    ADDED: popular urls is now persistent
    ADDED: popular-urls - krusader's answer to google-ranking ;-)
    ADDED: better completion in the origin box: constructs such as ~/src and
           $QTDIR/bin should work now.
    ADDED: Slovenian translation (thanks Matej Urbancic)
    ADDED: bookmarks can now be placed into toolbars
    ADDED: searcher, feed to listbox (with virtual folders)
    ADDED: Primitive scripting support; Warning: very alpha!!
    ADDED: new toolbar for actions. use view->show actions toolbar. you'll need
           to remove ~/.kde/share/apps/krusaderui.rc to see it